src/pages/variants/WorkBench.module.scss
.zeppelinImg {
  width: 144px;
  height: 79px;
}

.imgContainer {
  padding: 16px;
  margin-right: 12px;
}

.textAndBtnContainer {
  margin-left: 12px;
  width: 378px;
}

.textContainer {
  height: 24px;
}

.alert {
  min-height: 40px;
}

